--- a/rust-client/Cargo.toml
+++ b/rust-client/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 [dependencies]
 rdev = "0.5.0" 
 rusqlite = { version = "0.31.0", features = ["bundled"] }
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 whoami = "1.5.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
 windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_System_SystemInformation",
